fixed paths for some images

--- a/trivia-quiz/categories.html
+++ b/trivia-quiz/categories.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="Nemanja Mikic">
+    <meta name="author" content="Nemanja Mikic" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/circle-wavy-question-fill.svg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,8 +23,8 @@
     <header>
       <a href="./index.html" class="logo">Trivia<span>Quiz</span></a>
       <nav>
-        <a href="#">ABOUT</a>
-        <a href="#">CONTACT</a>
+        <a href="https://github.com/Mikic32/trivia-quiz">GitHub</a>
+        <a href="#">Contact Me</a>
       </nav>
     </header>
     <main>
