--- a/trivia-quiz/index.html
+++ b/trivia-quiz/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="Nemanja Mikic">
+    <meta name="author" content="Nemanja Mikic" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/circle-wavy-question-fill.svg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,30 +23,36 @@
     <header>
       <a href="#" class="logo">Trivia<span>Quiz</span></a>
       <nav>
-
         <a href="https://github.com/Mikic32/trivia-quiz">GitHub</a>
-        <a href="./contact.html">Contact Me</a>
+        <a href="#">Contact Me</a>
       </nav>
     </header>
     <main>
       <div class="container">
-          <div class="home-textbox">
-            <h1>Test your trivia expertise with this Quiz!</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-              tempore. Modi asperiores corporis accusamus odit blanditiis
-              laudantium repellendus libero aperiam recusandae maiores repellat
-              vel, fugiat totam deleniti atque est quisquam.
-            </p>
-            <a href="./categories.html" class="btn">GET STARTED</a>
-          </div>
-          <div class="home-image">
-          </div>
+        <div class="home-textbox">
+          <h1>Test your trivia expertise with this Quiz!</h1>
+          <p>
+            Put your knowlage to the test, select up to 4 topics for the quiz,
+            the topics include Music, History, Geography and Science. Then
+            select the difficulty level. You will answer 5 multiple choice
+            questions based on the topics you selected.
+          </p>
+          <a href="./categories.html" class="btn">GET STARTED</a>
+        </div>
+        <div class="home-image"></div>
       </div>
       <div class="wave">
-          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-              <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-          </svg>
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
       </div>
     </main>
   </body>
