--- a/trivia-quiz/contact.html
+++ b/trivia-quiz/contact.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="Nemanja Mikic" />
+    <meta name="author" content="Nemanja Mikic">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/circle-wavy-question-fill.svg"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,31 +12,29 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <title>Trivia Quiz</title>
   </head>
   <body>
     <header>
-      <a href="#" class="logo">Trivia<span>Quiz</span></a>
+      <a href="./index.html" class="logo">Trivia<span>Quiz</span></a>
       <nav>
         <a href="https://github.com/Mikic32/trivia-quiz">GitHub</a>
         <a href="#">Contact Me</a>
       </nav>
     </header>
     <main>
-      <div class="container">
-        <div class="home-textbox">
-          <h1>Test your trivia expertise with this Quiz!</h1>
-          <p>
-            Put your knowlage to the test, select up to 4 topics for the quiz,
-            the topics include Music, History, Geography and Science. Then
-            select the difficulty level. You will answer 5 multiple choice
-            questions based on the topics you selected.
-          </p>
-          <a href="./categories.html" class="btn">GET STARTED</a>
+      <div class="card">
+        <h1>GET IN TOUCH</h1>
+        <div class="contact-box-container">
+            <figure class="contact-box">
+                <div class="contact-icon">
+                    <i class="ph-linkedin-logo-fill" style="color: #fff;"></i>
+                </div>
+            </figure>
         </div>
-        <div class="home-image"></div>
       </div>
-      <div class="wave">
+      <div class="wave2">
         <svg
           data-name="Layer 1"
           xmlns="http://www.w3.org/2000/svg"
@@ -55,5 +48,6 @@
         </svg>
       </div>
     </main>
+    <script src="./js/index.js"></script>
   </body>
 </html>
